[package]
name = "bran"
version = "0.2.0"
authors = [
    "Y. T. Chung <zonyitoo@gmail.com>",
    "Young.Wu <doomsplayer@gmail.com>",
    "Rustcc Developers"
]
license = "MIT/ISC"
repository = "https://github.com/rustcc/coroutine-rs"
description = "Coroutine Library in Rust"
readme = "README.md"
homepage = "https://github.com/rustcc/coroutine-rs"
build = "build.rs"
keywords = ["coroutine", "green", "thread", "fiber"]

[build-dependencies]
gcc = "*"
log = "*"

[lib]
name = "bran"
path = "src/lib.rs"

[dependencies]
mmap = "*"

[dev-dependencies]
num_cpus = "*"
